--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,20 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  # page titles
+  title_register_account: 'Register Account'
+
+  # buttons
+  button_create_account: 'Create Account'
+
+  # form fields
+  field_username: 'Username'
+  field_email: 'Email'
+  field_email_confirmation: 'Email confirmation'
+  field_password: 'Password'
+  field_password_confirmation: 'Password confirmation'
+
+  # flash messages
+  flash_account_registered_successfully: 'Your account has been created successfully.'
+  flash_account_registration_error: 'Could not create new user account: %{error}'
+
+  # user cp navigation items
+  ucp_title_register: 'Create Account'
