Add create thread page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,11 @@
 en:
   # page titles
   title_register_account: 'Register Account'
+  title_board_thread_new: 'New thread in board: %{board}'
 
   # buttons
   button_create_account: 'Create Account'
+  button_thread_create: 'Create Thread'
 
   # form fields
   field_username: 'Username'
@@ -11,10 +13,13 @@ en:
   field_email_confirmation: 'Email confirmation'
   field_password: 'Password'
   field_password_confirmation: 'Password confirmation'
+  field_title: 'Title'
+  field_message: 'Message'
 
   # flash messages
   flash_account_registered_successfully: 'Your account has been created successfully.'
   flash_account_registration_error: 'Could not create new user account: %{error}'
+  flash_board_thread_create_error: 'Could not create new thread: %{error}'
 
   # user cp navigation
   ucp_logged_in_as: 'Logged in as %{username}.'
